--- a/assets/stylesheets/modal.css
+++ b/assets/stylesheets/modal.css
@@ -33,5 +33,9 @@
   font-size: var(--button-font-size);
   
   float: right;
-  width: 33%;
+  min-width: 33%;
+}
+.h-centered {
+  width: 100%;
+  text-align: center;
 }
