--- a/assets/stylesheets/modal.css
+++ b/assets/stylesheets/modal.css
@@ -1,4 +1,3 @@
-
 .modal {
   position: absolute;
   transform: translate(-50%, -50%);
@@ -25,10 +24,10 @@
   width: 100%;
 }
 .modal input[type=submit] {
-  background: var(--button-background);
-  border-color: var(--button-color);
+  background: var(--confirm-button-background);
+  border-color: var(--confirm-button-border-color);
 
-  color: var(--button-text-color);
+  color: var(--confirm-button-text-color);
   font-weight: var(--button-font-weight);
   font-size: var(--button-font-size);
   
