Made gamemode select screen pretty, functional and error-handlingery. Added page to enter the join_code for a current_game. Made a basic lobby page that new-game.php and join-game.php redirect to. Added a page that lists all currently running multiplayer games (for debugging, mostly. Might keep it around).

--- a/assets/stylesheets/modal.css
+++ b/assets/stylesheets/modal.css
@@ -1,3 +1,5 @@
+@import "./button.css";
+
 .modal {
   position: absolute;
   transform: translate(-50%, -50%);
@@ -14,25 +16,12 @@
 .modal h1 {
   text-align: center;
 }
-.modal input {
+.modal input[type=text], input[type=password] {
   padding: var(--text-input-padding);
   border-radius: var(--text-input-border-radius);
   border: var(--text-input-border);
   margin: var(--text-input-margin);
-}
-.modal input[type=text], input[type=password] {
   width: 100%;
-}
-.modal input[type=submit] {
-  background: var(--confirm-button-background);
-  border-color: var(--confirm-button-border-color);
-
-  color: var(--confirm-button-text-color);
-  font-weight: var(--button-font-weight);
-  font-size: var(--button-font-size);
-  
-  float: right;
-  min-width: 33%;
 }
 .h-centered {
   width: 100%;
