Added leaderboard & SSE to game to track user activity.

--- a/assets/stylesheets/variables.css
+++ b/assets/stylesheets/variables.css
@@ -33,6 +33,10 @@
   /* Navbar styling */
   --navbar-height: 3rem;
 
+  /* Player list styling */
+  --player-list-border-radius: 10px;
+  --player-list-border: 3px solid #dddddd;
+
   /* Z-Indexes */
   --navbar-z: 1000;
 }
