--- a/assets/stylesheets/pages/page_new-game.css
+++ b/assets/stylesheets/pages/page_new-game.css
@@ -1,12 +1,21 @@
 #gamemode-button-container {
-  /* position: absolute; */
-  /* top: 50%; */
-  /* left: 50%; */
-  /* transform: translate(-50%, -50%); */
-  
   height: 30%;
 
   display: flex;
   width: 100%;
   justify-content: space-evenly;
+}
+#question-categories {
+  margin: var(--text-input-margin);
+}
+
+.gamemode-button {
+  transition: background-image 0.3s;
+  background-size: contain !important;
+}
+#gamemode_select_Singleplayer:hover {
+  background: url("../../images/Bikos\ Vriendje.jpg");
+}
+#gamemode_select_Multiplayer:hover {
+  background: url("../../images/Lieverds.jpg");
 }
